// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProviderForm 预设新增行金标 > claude > AWS Bedrock (API Key) 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.env.AWS_BEARER_TOKEN_BEDROCK",
  ],
  "row": {
    "icon": "aws",
    "iconColor": "#FF9900",
    "meta": {
      "endpointAutoSelect": true,
    },
    "name": "AWS Bedrock (API Key)",
    "notes": "",
    "presetCategory": "cloud_provider",
    "presetId": "claude-<index>",
    "settingsConfig": {
      "env": {
        "ANTHROPIC_BASE_URL": "https://bedrock-runtime.us-east-1.amazonaws.com",
        "ANTHROPIC_DEFAULT_HAIKU_MODEL": "global.anthropic.claude-haiku-4-5-20251001-v1:0",
        "ANTHROPIC_DEFAULT_OPUS_MODEL": "global.anthropic.claude-opus-5",
        "ANTHROPIC_DEFAULT_SONNET_MODEL": "global.anthropic.claude-sonnet-5",
        "ANTHROPIC_MODEL": "global.anthropic.claude-opus-5",
        "AWS_BEARER_TOKEN_BEDROCK": "sk-golden-test",
        "AWS_REGION": "us-east-1",
        "CLAUDE_CODE_USE_BEDROCK": "1",
      },
    },
    "websiteUrl": "https://aws.amazon.com/bedrock/",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > claude > AtlasCloud 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.env.ANTHROPIC_AUTH_TOKEN",
  ],
  "row": {
    "icon": "atlascloud",
    "iconColor": "",
    "meta": {
      "endpointAutoSelect": true,
    },
    "name": "AtlasCloud",
    "notes": "",
    "presetCategory": "aggregator",
    "presetId": "claude-<index>",
    "settingsConfig": {
      "env": {
        "ANTHROPIC_AUTH_TOKEN": "sk-golden-test",
        "ANTHROPIC_BASE_URL": "https://api.atlascloud.ai",
        "ANTHROPIC_DEFAULT_HAIKU_MODEL": "zai-org/glm-5.1",
        "ANTHROPIC_DEFAULT_OPUS_MODEL": "zai-org/glm-5.1",
        "ANTHROPIC_DEFAULT_SONNET_MODEL": "zai-org/glm-5.1",
        "ANTHROPIC_MODEL": "zai-org/glm-5.1",
        "CLAUDE_CODE_AUTO_MODE_SERVER": "0",
        "CLAUDE_CODE_DISABLE_EXPERIMENTAL_BETAS": "1",
      },
    },
    "websiteUrl": "https://www.atlascloud.ai/console/coding-plan",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > claude > Claude Official 1`] = `
{
  "apiKeyLocations": [],
  "row": {
    "icon": "anthropic",
    "iconColor": "#D4915D",
    "meta": {
      "endpointAutoSelect": true,
    },
    "name": "Claude Official",
    "notes": "",
    "presetCategory": "official",
    "presetId": "claude-<index>",
    "settingsConfig": {
      "env": {},
    },
    "websiteUrl": "https://www.anthropic.com/claude-code",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > claude > Kimi For Coding 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.env.ANTHROPIC_AUTH_TOKEN",
  ],
  "row": {
    "icon": "kimi",
    "iconColor": "#6366F1",
    "meta": {
      "endpointAutoSelect": true,
    },
    "name": "Kimi For Coding",
    "notes": "",
    "presetCategory": "cn_official",
    "presetId": "claude-<index>",
    "settingsConfig": {
      "env": {
        "ANTHROPIC_AUTH_TOKEN": "sk-golden-test",
        "ANTHROPIC_BASE_URL": "https://api.kimi.com/coding/",
        "ANTHROPIC_DEFAULT_HAIKU_MODEL": "kimi-for-coding",
        "ANTHROPIC_DEFAULT_OPUS_MODEL": "kimi-for-coding",
        "ANTHROPIC_DEFAULT_SONNET_MODEL": "kimi-for-coding",
        "ANTHROPIC_MODEL": "kimi-for-coding",
        "CLAUDE_CODE_AUTO_COMPACT_WINDOW": "262144",
        "CLAUDE_CODE_AUTO_MODE_SERVER": "0",
        "CLAUDE_CODE_MAX_CONTEXT_TOKENS": "262144",
      },
    },
    "websiteUrl": "https://www.kimi.com/code/",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > claude > OpenRouter 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.env.ANTHROPIC_AUTH_TOKEN",
  ],
  "row": {
    "icon": "openrouter",
    "iconColor": "#6566F1",
    "meta": {
      "endpointAutoSelect": true,
    },
    "name": "OpenRouter",
    "notes": "",
    "presetCategory": "aggregator",
    "presetId": "claude-<index>",
    "settingsConfig": {
      "env": {
        "ANTHROPIC_AUTH_TOKEN": "sk-golden-test",
        "ANTHROPIC_BASE_URL": "https://openrouter.ai/api",
        "ANTHROPIC_DEFAULT_HAIKU_MODEL": "anthropic/claude-haiku-4.5",
        "ANTHROPIC_DEFAULT_OPUS_MODEL": "anthropic/claude-opus-5",
        "ANTHROPIC_DEFAULT_SONNET_MODEL": "anthropic/claude-sonnet-5",
        "ANTHROPIC_MODEL": "anthropic/claude-sonnet-5",
        "CLAUDE_CODE_AUTO_MODE_SERVER": "0",
      },
    },
    "websiteUrl": "https://openrouter.ai",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > codex > CherryIN 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.auth.OPENAI_API_KEY",
  ],
  "row": {
    "icon": "cherryin",
    "iconColor": "",
    "meta": {
      "apiFormat": "openai_responses",
      "endpointAutoSelect": true,
    },
    "name": "CherryIN",
    "notes": "",
    "presetCategory": "aggregator",
    "presetId": "codex-<index>",
    "settingsConfig": {
      "auth": {
        "OPENAI_API_KEY": "sk-golden-test",
      },
      "config": "model_provider = "custom"
model = "openai/gpt-5.6-sol"
model_reasoning_effort = "high"
disable_response_storage = true

[model_providers.custom]
name = "cherryin"
base_url = "https://open.cherryin.net/v1"
wire_api = "responses"
requires_openai_auth = true",
    },
    "websiteUrl": "https://open.cherryin.ai",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > codex > OpenAI Official 1`] = `
{
  "apiKeyLocations": [],
  "row": {
    "icon": "openai",
    "iconColor": "#00A67E",
    "meta": {
      "endpointAutoSelect": true,
    },
    "name": "OpenAI Official",
    "notes": "",
    "presetCategory": "official",
    "presetId": "codex-<index>",
    "settingsConfig": {
      "auth": {},
      "config": "",
    },
    "websiteUrl": "https://chatgpt.com/codex",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > codex > xAI (Grok) 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.auth.OPENAI_API_KEY",
  ],
  "row": {
    "icon": "xai",
    "iconColor": "#000000",
    "meta": {
      "apiFormat": "openai_responses",
      "endpointAutoSelect": true,
    },
    "name": "xAI (Grok)",
    "notes": "",
    "presetCategory": "third_party",
    "presetId": "codex-<index>",
    "settingsConfig": {
      "auth": {
        "OPENAI_API_KEY": "sk-golden-test",
      },
      "config": "model_provider = "custom"
model = "grok-4.5"
model_reasoning_effort = "high"
disable_response_storage = true

[model_providers.custom]
name = "xai"
base_url = "https://api.x.ai/v1"
wire_api = "responses"
requires_openai_auth = true",
      "modelCatalog": {
        "models": [
          {
            "contextWindow": 500000,
            "displayName": "Grok 4.7",
            "inputModalities": [
              "text",
              "image",
            ],
            "model": "grok-4.7",
            "reasoningLevels": [
              "low",
              "medium",
              "high",
              "xhigh",
            ],
            "supportsParallelToolCalls": true,
          },
          {
            "contextWindow": 500000,
            "displayName": "Grok 4.5",
            "inputModalities": [
              "text",
              "image",
            ],
            "model": "grok-4.5",
            "reasoningLevels": [
              "low",
              "medium",
              "high",
              "xhigh",
            ],
            "supportsParallelToolCalls": true,
          },
        ],
      },
    },
    "websiteUrl": "https://x.ai/api",
  },
}
`;
